--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html>
-  
-  
+  <head>
+    <!--Header goes here-->
+  </head>
+  <body>
+    <!--Body goes here-->
+  </body>
   
   
   
