Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--Header goes here-->
+    <title>Gays are amazing</title>
   </head>
   <body>
     <!--Body goes here-->
