Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <title>Gays are amazing</title>
   </head>
   <body>
-    <!--Body goes here-->
+    <h5>Top 5 reasons gays are amazing:<h5>
+    <ol>
+      <li>Charisma</li>
+      <li>Uniquness</li>
+      <li>Nerve</li>
+      <li>Talent</li>
+      <li>Sass</li>
+    </ol>
   </body>
   
   
